// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmailPill > renders and removes the email when isValid=false 1`] = `
<div>
  <div
    class="_flex_4dswl_9 _pill_v00ef_8 sc-gsDMPd cluucG"
    style="--mx-flex-display: inline-flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
  >
    <svg
      color="var(--cpd-color-icon-critical-primary)"
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12t2.325 5.675T12 20"
      />
    </svg>
    <span
      class="_label_v00ef_14"
      id="_r_1_"
    >
      not-an-email
    </span>
    <button
      aria-describedby="_r_1_"
      aria-label="action|delete"
      class="_icon-button_1215g_8 _icon_v00ef_19 mx_Dialog_nonDialogButton"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 16px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_j097f_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`EmailPill > renders and removes the email when isValid=true 1`] = `
<div>
  <div
    class="_flex_4dswl_9 _pill_v00ef_8"
    style="--mx-flex-display: inline-flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
  >
    <div
      aria-hidden="true"
      class="_flex_4dswl_9 sc-bdvwhi gwNpAI"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      @
    </div>
    <span
      class="_label_v00ef_14"
      id="_r_0_"
    >
      alice@example.com
    </span>
    <button
      aria-describedby="_r_0_"
      aria-label="action|delete"
      class="_icon-button_1215g_8 _icon_v00ef_19 mx_Dialog_nonDialogButton"
      data-kind="primary"
      role="button"
      style="--cpd-icon-button-size: 16px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_j097f_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
